# pocs

./: .gitignore  README.md
.devcontainer/: devcontainer.json
imagine/: Makefile  main.py  mnist_evaluate.py  mnist_train.py  model_sizing_demo.py  pyproject.toml
imagine/app/: autoencoder.py  autoencoder_train.py  datasets.py  mnist_demo_helpers.py  model_builder.py  model_sizing.py  training_helpers.py
imagine/app/fixed_models/: cnn_classifier.py
imagine/pinterest/: image_downloader.py
imagine/src/imagine/: datasets.py
imagine/tests/: helpers.py  test_chrome_driver.py  test_datasets.py  test_pinterest_download.py
imagine/tests/app_tests/: test_autoenc_train.py  test_datasets.py  test_model_builder_init.py
imagine/tests/external_tests/: test_pinterest_download.py
imagine/tests/file_fixtures/: cnn_init.txt  cnn_init_add_layer.txt
